log
Fri 23 Sep 2022 11:43:14 AM UTC: 
 tests:  1|8
total_score: 0/70
03b8ea7
Fri 23 Sep 2022 12:01:11 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:6: error: ‘current’ undeclared (first use in this function)
   42 |   if(current!=NULL){
      |      ^~~~~~~
treemap.c:42:6: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: ‘aux’ undeclared (first use in this function)
   79 |     aux = tree->root;
      |     ^~~
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
97702cb
Fri 23 Sep 2022 12:01:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: ‘aux’ undeclared (first use in this function)
   79 |     aux = tree->root;
      |     ^~~
treemap.c:79:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
c025443
Fri 23 Sep 2022 12:01:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: unknown type name ‘aux’
   79 |     aux* = tree->root;
      |     ^~~
treemap.c:79:10: error: expected identifier or ‘(’ before ‘=’ token
   79 |     aux* = tree->root;
      |          ^
treemap.c:80:11: error: ‘aux’ undeclared (first use in this function)
   80 |     while(aux->key < )
      |           ^~~
treemap.c:80:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
cecfe63
Fri 23 Sep 2022 12:05:53 PM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:5: error: unknown type name ‘aux’
   76 |     aux* = tree->root;
      |     ^~~
treemap.c:76:10: error: expected identifier or ‘(’ before ‘=’ token
   76 |     aux* = tree->root;
      |          ^
treemap.c:77:11: error: ‘aux’ undeclared (first use in this function)
   77 |     while(aux->key < )
      |           ^~~
treemap.c:77:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:22: error: expected expression before ‘)’ token
   77 |     while(aux->key < )
      |                      ^
Compilation failed
ce7111b
Fri 23 Sep 2022 12:06:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:14: error: ‘TreeNode’ has no member named ‘key’
   77 |     while(aux->key < )
      |              ^~
treemap.c:77:22: error: expected expression before ‘)’ token
   77 |     while(aux->key < )
      |                      ^
Compilation failed
89ba7a5
